--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
+MONGO_URL = 'mongodb+srv://enhaoliu14:Hel4.002602@cluster0.hjpqite.mongodb.net/FoodOrder'
+PORT = "4000"
 JWT_SECRET = "random#secret"
 STRIPE_SECRET_KEY = "secret_key"
 CLOUDINARY_CLOUD_NAME = "dpxebnp9l"
